animation version destkop

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                                                     <input type="checkbox" id="heart-checkbox-3" class="visually-hidden">
                                                     <label for="heart-checkbox-3" class="heart-icon"></label>                                           
                                                 </div> 
+                                                <div class="container">
+                                                    <div class="progress">
+                                                        <div class="progress__bar"></div>
+                                                    </div>
+                                                </div>
                                         </div>
                                     </a>  
                                 </article>
