--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                             </div>
                         </div>
                         <a href="#restaurants">
-                            <input  class="search__explore" type="button" value="Explorer nos restaurants">
-                        </a>
+                            <button  class="search__explore" type="button" value="Explorer nos restaurants">Explorer nos restaurants
+                        </button>
                     </form>
             </section>
             <section class="functionality">
