projet terminé apres vérification et validation par w3c

--- a/restaurants/delicedessens.html
+++ b/restaurants/delicedessens.html
@@ -42,13 +42,13 @@
       </header>
 
       <main>
-        <section class="restaurant__image">
+        <div class="restaurant__image">
           <img
             src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
             class="palette"
             alt="image délice des sens" />
-        </section>
-        <section class="restaurant">
+        </div>
+        <div class="restaurant">
           <div class="restaurants__description">
             <h1 class="restaurants__description--title">Le délice des sens</h1>
             <div class="restaurants__description--icone">
@@ -89,7 +89,7 @@
                   </div>
                 </div>
                 <div class="price">35€</div>
-                
+
                 <div class="checkbox">
                   <div>
                     <i class="fa-solid fa-circle-check"></i>
@@ -225,7 +225,7 @@
           <div class="order">
             <button class="order__button">Commander</button>
           </div>
-        </section>
+        </div>
       </main>
 
       <footer>
