--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                         <div class="restaurant__cards">
                                 <article class="card">
-                                    <a href="restaurants/palettedugout.html">
+                                    <a href="../restaurants/palettedugout.html">
                                         <img class="card__image" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image-hotel du port">
                                         </a>
                                         <div class="card__news">
